--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CON_STRING="mongodb+srv://abidrazaa:Abcd1234@cluster0.lr2rk.mongodb.net/?retryWrites=true&w=majority"
-TOKEN_KEY=seceret
+DB_CON_STRING="mongodb+srv://zetrey:zetrey@cluster0.aflyd.mongodb.net/Eshop?retryWrites=true&w=majority"
+TOKEN_KEY=secret
 PORT = 3000
