--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CON_STRING="mongodb+srv://zetrey:zetrey@cluster0.aflyd.mongodb.net/Eshop?retryWrites=true&w=majority"
-TOKEN_KEY=secret
+DB_CON_STRING="YOUR_MONGODB_URL"
+TOKEN_KEY=YOUR SECRET
 PORT = 3000
