--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CON_STRING="mongodb+srv://zetrey:zetrey@cluster0.aflyd.mongodb.net/Eshop?retryWrites=true&w=majority"
+DB_CON_STRING="mongodb+srv://zetrey:zetrey@cluster0.aflyd.mongodb.net/eshop_db?retryWrites=true&w=majority"
 TOKEN_KEY=secret
 PORT = 3000
